# Spike-MLE-Challenge

./: .gitignore  Dockerfile  README.md  data_scientist_challenge_answers.ipynb  docker-compose.yml  pipeline.ipynb  pyproject.toml
api/: Dockerfile  demo.py  main.py  model1.joblib  model2.joblib
dags/: pipeline-config.json  pipeline.py
dags/utils/: data_management.py  load_data.py  models.py  utils.py
models/: model_1.joblib  model_2.joblib
