[tool.poetry]
name = "spike-mle-challenge"
version = "0.1.0"
description = ""
authors = ["Antonio Ossa Guerra <aaossa@uc.cl>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
numpy = "^1.22.4"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
